<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.faktorips</groupId>
        <artifactId>base</artifactId>
        <version>24.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>faktorips-runtime-parent</artifactId>
    <packaging>pom</packaging>

    <name>Faktor-IPS Runtime Parent</name>
    <description>Defines versions for and configures Maven plugins used to build the Faktor-IPS runtime libraries</description>

    <properties>
        <!-- plugin versions -->
        <maven-bundle-plugin.version>5.1.6</maven-bundle-plugin.version>
        <!-- java and compiler options -->
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <modules>
        <module>bom</module>
        <module>faktorips-runtime</module>
        <module>faktorips-runtime/client</module>
        <module>faktorips-runtime-groovy</module>
        <module>faktorips-runtime-javax-xml</module>
        <module>faktorips-runtime-jakarta-xml</module>
        <module>faktorips-testsupport</module>
        <module>faktorips-valuetypes</module>
        <module>faktorips-valuetypes-joda</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.faktorips</groupId>
                <artifactId>faktorips-runtime-bom</artifactId>
                <version>${faktorips.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>${maven-bundle-plugin.version}</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>generate-manifest</id>
                            <phase>process-classes</phase>
                            <goals>
                                <goal>manifest</goal>
                            </goals>
                            <configuration>
                                <supportIncrementalBuild>true</supportIncrementalBuild>
                            </configuration>
                        </execution>
                    </executions>
                    <configuration>
                        <instructions>
                            <Bundle-Vendor>Faktor Zehn GmbH</Bundle-Vendor>
                            <Export-Package>org.faktorips.*</Export-Package>
                        </instructions>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <distributionManagement>
                <repository>
                    <id>ossrh</id>
                    <name>Maven Central</name>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>